--- a/src/public/css/pia.standC.css
+++ b/src/public/css/pia.standC.css
@@ -1,4 +1,9 @@
 @charset "utf-8";
+
+.C {
+    position: relative;
+    top: 40px;
+}
 .stand-2c td,
 .stand-3c td,
 .stand-4c td {
@@ -7,8 +12,8 @@
 
 /* 2階スタンドC席 */
 .stand-2c {
-    border-right: solid 5px rgb(251, 206, 139);
-    border-left: solid 5px rgb(251, 206, 139);
+    /* border-right: solid 5px rgb(251, 206, 139);
+    border-left: solid 5px rgb(251, 206, 139); */
     border-top: solid 5px rgb(251, 206, 139);
     border-bottom: solid 5px rgb(251, 206, 139);
     padding: 10px;
@@ -16,18 +21,18 @@
 
 /* 3階スタンドC席 */
 .stand-3c {
-    border-right: solid 5px rgb(154, 248, 143);
-    border-left: solid 5px rgb(154, 248, 143);
+    /* border-right: solid 5px rgb(154, 248, 143);
+    border-left: solid 5px rgb(154, 248, 143); */
     border-top: solid 5px rgb(154, 248, 143);
     border-bottom: solid 5px rgb(154, 248, 143);
-    padding: 6px;
+    padding: 3px;
 }
 
 /* 4階スタンドC席 */
 .stand-4c {
-    border-right: solid 5px rgb(81, 175, 199);
-    border-left: solid 5px rgb(81, 175, 199);
+    /* border-right: solid 5px rgb(81, 175, 199);
+    border-left: solid 5px rgb(81, 175, 199); */
     border-top: solid 5px rgb(81, 175, 199);
     border-bottom: solid 5px rgb(81, 175, 199);
-    padding: 6px;
+    padding: 3px;
 }
