--- a/src/public/css/pia.standLC.css
+++ b/src/public/css/pia.standLC.css
@@ -2,16 +2,23 @@
 
 /* LC席 */
 
+.LC {
+    transform: rotate(53deg);
+    position: absolute;
+    top: 770px; /* #contents内の上から何pxか */
+    right: 1220px; /*#contents内の右から何pxか */
+}
+
 .stand-2lc td,
 .stand-3lc td,
 .stand-4lc td {
-    padding: 20px;
+    padding: 8px;
 }
 
 /* 2階スタンドLC席 */
 .stand-2lc {
-    border-right: solid 5px rgb(251, 206, 139);
-    border-left: solid 5px rgb(251, 206, 139);
+    /* border-right: solid 5px rgb(251, 206, 139); */
+    /* border-left: solid 5px rgb(251, 206, 139); */
     border-top: solid 5px rgb(251, 206, 139);
     border-bottom: solid 5px rgb(251, 206, 139);
     padding: 9px;
@@ -19,18 +26,18 @@
 
 /* 3階スタンドLC席 */
 .stand-3lc {
-    border-right: solid 5px rgb(154, 248, 143);
-    border-left: solid 5px rgb(154, 248, 143);
+    /* border-right: solid 5px rgb(154, 248, 143); */
+    /* border-left: solid 5px rgb(154, 248, 143); */
     border-top: solid 5px rgb(154, 248, 143);
     border-bottom: solid 5px rgb(154, 248, 143);
-    padding: 4px;
+    padding: 3px;
 }
 
 /* 4階スタンドLC席 */
 .stand-4lc {
-    border-right: solid 5px rgb(81, 175, 199);
-    border-left: solid 5px rgb(81, 175, 199);
+    /* border-right: solid 5px rgb(81, 175, 199); */
+    /* border-left: solid 5px rgb(81, 175, 199); */
     border-top: solid 5px rgb(81, 175, 199);
     border-bottom: solid 5px rgb(81, 175, 199);
-    padding: 1px;
+    padding: 2px;
 }
