--- a/src/public/css/pia.arena.css
+++ b/src/public/css/pia.arena.css
@@ -20,7 +20,11 @@ table {
 .search-box {
     position: absolute;
     bottom: 850px;
-    left: 750px;
+    left: 680px;
+}
+.piaTitle{
+    margin-left: 30px;
+    font-size: larger;
 }
 
 /* ステージ */
