--- a/src/public/css/pia.arena.css
+++ b/src/public/css/pia.arena.css
@@ -1,56 +1,107 @@
 @charset "utf-8";
-table {
-    margin: 20px auto;
-}
-.venue {
-    padding: 0.5em 1em;
-    margin: 2em 0;
-    border: double 5px #000000;
-    height: 120vh;
-    width: 150vh;
-    margin-right: auto;
-    margin-left: auto;
+@media (min-width: 1000px) {
+    table {
+        margin: 20px auto;
+    }
+    .venue {
+        padding: 0.5em 1em;
+        margin: 2em 0;
+        border: double 5px #000000;
+        height: 120vh;
+        width: 150vh;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    .mySeat {
+        background-color: rgb(248, 50, 50);
+        font-size: larger;
+    }
+
+    .search-box {
+        position: absolute;
+        bottom: 850px;
+        left: 680px;
+    }
+    .piaTitle {
+        margin-left: 30px;
+        font-size: larger;
+    }
+
+    /* ステージ */
+    .stage {
+        background: #9a8e8e;
+        color: #fff;
+        padding: 25px;
+        border-bottom: solid 20px;
+        width: 639px;
+        height: 90px;
+        text-align: center;
+    }
+
+    /* アリーナ */
+    .arena {
+        border-right: solid 10px rgb(173, 236, 252);
+        border-left: solid 10px rgb(173, 236, 252);
+        padding: 25px;
+        height: 90px;
+    }
+    .arena-top {
+        border-top: solid 8px rgb(173, 236, 252);
+    }
+    .arena-bottom {
+        border-bottom: solid 13px rgb(173, 236, 252);
+    }
+    .cd-arena {
+        margin-left: 94px;
+    }
 }
 
-.mySeat {
-    background-color: rgb(248, 50, 50);
-    font-size: larger;
-}
+/* スマホ */
+@media (max-width: 999px) {
+    table {
+        margin: 20px auto;
+    }
+    .venue {
+        padding: 0.5em 1em;
+        margin: 2em 0;
+        border: double 5px #000000;
+        height: 80vh;
+        width: 45vh;
+        margin-right: auto;
+        margin-left: auto;
+    }
 
-.search-box {
-    position: absolute;
-    bottom: 850px;
-    left: 680px;
-}
-.piaTitle{
-    margin-left: 30px;
-    font-size: larger;
-}
+    .mySeat {
+        background-color: rgb(248, 50, 50);
+        font-size: larger;
+    }
 
-/* ステージ */
-.stage {
-    background: #9a8e8e;
-    color: #fff;
-    padding: 25px;
-    border-bottom: solid 20px;
-    width: 639px;
-    height: 90px;
-    text-align: center;
-}
+    /* ステージ */
+    .stage {
+        background: #9a8e8e;
+        color: #fff;
+        padding: 25px;
+        border-bottom: solid 20px;
+        width: 220px;
+        height: 9px;
+        text-align: center;
+    }
 
-/* アリーナ */
-.arena {
-    border-right: solid 10px rgb(173, 236, 252);
-    border-left: solid 10px rgb(173, 236, 252);
-    padding: 25px;
-    height: 90px;
-}
-.arena-top {
-    border-top: solid 8px rgb(173, 236, 252);
-}
-.arena-bottom {
-    border-bottom: solid 13px rgb(173, 236, 252);
-}
-.cd-arena {
-    margin-left: 94px;
+    /* アリーナ */
+    .arena {
+        border-right: solid 4px rgb(173, 236, 252);
+        border-left: solid 4px rgb(173, 236, 252);
+        height: 35px;
+        width: 15px;
+    }
+    .arena-top {
+        border-top: solid 8px rgb(173, 236, 252);
+    }
+    .arena-bottom {
+        border-bottom: solid 13px rgb(173, 236, 252);
+    }
+    .cd-arena {
+        margin-left: 33px;
+    }
 }
