--- a/src/public/css/pia.standLC.css
+++ b/src/public/css/pia.standLC.css
@@ -2,18 +2,13 @@
 
 /* LC席 */
 
+/* PC */
 @media (min-width: 1000px) {
     .LC {
         transform: rotate(53deg);
         position: absolute;
-        top: 810px;
-        right: 1050px;
-    }
-
-    .stand-2lc td,
-    .stand-3lc td,
-    .stand-4lc td {
-        padding: 8px;
+        top: 800px;
+        left: 250px;
     }
 
     /* 2階スタンドLC席 */
@@ -38,12 +33,44 @@
     }
 }
 
-/* スマホ */
+/* タブレット */
 @media (max-width: 999px) {
     .LC {
         transform: rotate(53deg);
         position: absolute;
-        top: 730px;
+        top: 750px;
+        right: 500px;
+    }
+
+    /* 2階スタンドLC席 */
+    .stand-2lc {
+        border-top: solid 5px rgb(251, 206, 139);
+        border-bottom: solid 5px rgb(251, 206, 139);
+        padding: 9px;
+    }
+
+    /* 3階スタンドLC席 */
+    .stand-3lc {
+        border-top: solid 5px rgb(154, 248, 143);
+        border-bottom: solid 5px rgb(154, 248, 143);
+        padding: 3px;
+    }
+
+    /* 4階スタンドLC席 */
+    .stand-4lc {
+        border-top: solid 5px rgb(81, 175, 199);
+        border-bottom: solid 5px rgb(81, 175, 199);
+        padding: 2px;
+    }
+}
+
+
+/* スマホ */
+@media (max-width: 540px) {
+    .LC {
+        transform: rotate(53deg);
+        position: absolute;
+        top: 830px;
         right: 112px;
     }
 
