--- a/src/public/css/pia.standR.css
+++ b/src/public/css/pia.standR.css
@@ -1,17 +1,20 @@
 @charset "utf-8";
 
+/* PC */
 @media (min-width: 1000px) {
     .R {
         display: flex;
         position: absolute;
-        top: 270px;
-        right: 80px;
+        top: 300px;
+        right: 250px;
     }
+
     .stand-2r td,
     .stand-3r td,
     .stand-4r td {
-        padding: 7px;
+        padding: 8px;
     }
+
     .stand-2r tr,
     .stand-3r tr,
     .stand-4r tr {
@@ -20,50 +23,105 @@
 
     /* 2階スタンドR席 */
     .stand-2r {
-        border-right: solid 5px rgb(251, 206, 139);
-        border-left: solid 5px rgb(251, 206, 139);
-        padding: 15px;
+        border-right: solid 4px rgb(251, 206, 139);
+        border-left: solid 4px rgb(251, 206, 139);
     }
     .stand-2rTop {
-        border-top: solid 2px rgb(251, 206, 139);
+        border-top: solid 1px rgb(251, 206, 139);
     }
     .stand-2rBottom {
-        border-bottom: solid 2px rgb(251, 206, 139);
+        border-bottom: solid 1px rgb(251, 206, 139);
     }
 
     /* 3階スタンドR席 */
     .stand-3r {
-        border-right: solid 5px rgb(154, 248, 143);
-        border-left: solid 5px rgb(154, 248, 143);
-        padding: 10px;
+        border-right: solid 4px rgb(154, 248, 143);
+        border-left: solid 4px rgb(154, 248, 143);
     }
     .stand-3rTop {
-        border-top: solid 2px rgb(154, 248, 143);
+        border-top: solid 1px rgb(154, 248, 143);
     }
     .stand-3rBottom {
-        border-bottom: solid 2px rgb(154, 248, 143);
+        border-bottom: solid 1px rgb(154, 248, 143);
     }
 
     /* 4階スタンドR席 */
     .stand-4r {
-        border-right: solid 5px rgb(81, 175, 199);
-        border-left: solid 5px rgb(81, 175, 199);
-        padding: 10px;
+        border-right: solid 4px rgb(81, 175, 199);
+        border-left: solid 4px rgb(81, 175, 199);
     }
     .stand-4rTop {
-        border-top: solid 2px rgb(81, 175, 199);
+        border-top: solid 1px rgb(81, 175, 199);
     }
     .stand-4rBottom {
-        border-bottom: solid 2px rgb(81, 175, 199);
+        border-bottom: solid 1px rgb(81, 175, 199);
     }
 }
 
-/* スマホ */
+/* タブレット */
 @media (max-width: 999px) {
     .R {
         display: flex;
         position: absolute;
-        top: 391px;
+        top: 320px;
+        right: -30px;
+    }
+
+    .stand-2r td,
+    .stand-3r td,
+    .stand-4r td {
+        padding: 4px;
+    }
+
+    .stand-2r tr,
+    .stand-3r tr,
+    .stand-4r tr {
+        display: block;
+    }
+
+    /* 2階スタンドR席 */
+    .stand-2r {
+        border-right: solid 4px rgb(251, 206, 139);
+        border-left: solid 4px rgb(251, 206, 139);
+    }
+    .stand-2rTop {
+        border-top: solid 1px rgb(251, 206, 139);
+    }
+    .stand-2rBottom {
+        border-bottom: solid 1px rgb(251, 206, 139);
+    }
+
+    /* 3階スタンドR席 */
+    .stand-3r {
+        border-right: solid 4px rgb(154, 248, 143);
+        border-left: solid 4px rgb(154, 248, 143);
+    }
+    .stand-3rTop {
+        border-top: solid 1px rgb(154, 248, 143);
+    }
+    .stand-3rBottom {
+        border-bottom: solid 1px rgb(154, 248, 143);
+    }
+
+    /* 4階スタンドR席 */
+    .stand-4r {
+        border-right: solid 4px rgb(81, 175, 199);
+        border-left: solid 4px rgb(81, 175, 199);
+    }
+    .stand-4rTop {
+        border-top: solid 1px rgb(81, 175, 199);
+    }
+    .stand-4rBottom {
+        border-bottom: solid 1px rgb(81, 175, 199);
+    }
+}
+
+/* スマホ */
+@media (max-width: 540px) {
+    .R {
+        display: flex;
+        position: absolute;
+        top: 430px;
         right: -430px;
     }
 
