--- a/src/public/css/pia.standRC.css
+++ b/src/public/css/pia.standRC.css
@@ -1,19 +1,45 @@
 @charset "utf-8";
 
+/* PC */
 @media (min-width: 1000px) {
     /* RC席 */
 
     .RC {
-        transform: rotate(-53deg);
+        transform: rotate(-57deg);
         position: absolute;
-        top: 810px;
-        left: 1040px;
+        top: 800px;
+        right: 250px;
     }
 
-    .stand-2rc td,
-    .stand-3rc td,
-    .stand-4rc td {
-        padding: 8px;
+    /* 2階スタンドRC席 */
+    .stand-2rc {
+        border-top: solid 5px rgb(251, 206, 139);
+        border-bottom: solid 5px rgb(251, 206, 139);
+        padding: 9px;
+    }
+
+    /* 3階スタンドRC席 */
+    .stand-3rc {
+        border-top: solid 5px rgb(154, 248, 143);
+        border-bottom: solid 5px rgb(154, 248, 143);
+        padding: 3px;
+    }
+
+    /* 4階スタンドRC席 */
+    .stand-4rc {
+        border-top: solid 5px rgb(81, 175, 199);
+        border-bottom: solid 5px rgb(81, 175, 199);
+        padding: 2px;
+    }
+}
+
+/* タブレット */
+@media (max-width: 999px) {
+    .RC {
+        transform: rotate(-57deg);
+        position: absolute;
+        top: 750px;
+        right: -15px;
     }
 
     /* 2階スタンドRC席 */
@@ -39,11 +65,11 @@
 }
 
 /* スマホ */
-@media (max-width: 999px) {
+@media (max-width: 540px) {
     .RC {
         transform: rotate(-57deg);
         position: absolute;
-        top: 730px;
+        top: 830px;
         right: -460px;
     }
 
