--- a/src/public/css/pia.standC.css
+++ b/src/public/css/pia.standC.css
@@ -12,13 +12,17 @@
         border-top: solid 5px rgb(251, 206, 139);
         border-bottom: solid 5px rgb(251, 206, 139);
         padding: 15px;
+
+        background-color: rgb(249, 247, 205);
     }
 
     /* 3階スタンドC席 */
     .stand-3c {
-        border-top: solid 5px rgb(154, 248, 143);
-        border-bottom: solid 5px rgb(154, 248, 143);
+        border-top: solid 5px rgb(135, 248, 122);
+        border-bottom: solid 5px rgb(135, 248, 122);
         padding: 5px;
+
+        background-color: rgb(217, 248, 213);
     }
 
     /* 4階スタンドC席 */
@@ -26,6 +30,8 @@
         border-top: solid 5px rgb(81, 175, 199);
         border-bottom: solid 5px rgb(81, 175, 199);
         padding: 5px;
+
+        background-color: rgb(208, 243, 253);
     }
 }
 
