--- a/src/public/css/pia.standLC.css
+++ b/src/public/css/pia.standLC.css
@@ -16,13 +16,17 @@
         border-top: solid 5px rgb(251, 206, 139);
         border-bottom: solid 5px rgb(251, 206, 139);
         padding: 9px;
+
+        background-color: rgb(249, 247, 205);
     }
 
     /* 3階スタンドLC席 */
     .stand-3lc {
-        border-top: solid 5px rgb(154, 248, 143);
-        border-bottom: solid 5px rgb(154, 248, 143);
+        border-top: solid 5px rgb(135, 248, 122);
+        border-bottom: solid 5px rgb(135, 248, 122);
         padding: 3px;
+
+        background-color: rgb(217, 248, 213);
     }
 
     /* 4階スタンドLC席 */
@@ -30,6 +34,8 @@
         border-top: solid 5px rgb(81, 175, 199);
         border-bottom: solid 5px rgb(81, 175, 199);
         padding: 2px;
+
+        background-color: rgb(208, 243, 253);
     }
 }
 
