--- a/src/public/css/pia.arena.css
+++ b/src/public/css/pia.arena.css
@@ -1,11 +1,17 @@
 @charset "utf-8";
 
-.piaTitle{
+.piaTitle {
     color: #fff;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
 }
 
-.py-4{
+h1 span,
+p span {
+    background: #000000c0;
+}
+
+.py-4 {
     background-image: url(https://yuzu-official.com/s3/skiyaki/uploads/ckeditor/pictures/423380/content_content_mother_other.jpg);
 }
 
