--- a/src/public/css/pia.standLC.css
+++ b/src/public/css/pia.standLC.css
@@ -53,6 +53,8 @@
         border-top: solid 5px rgb(251, 206, 139);
         border-bottom: solid 5px rgb(251, 206, 139);
         padding: 9px;
+
+        background-color: rgb(249, 247, 205);
     }
 
     /* 3階スタンドLC席 */
@@ -60,6 +62,8 @@
         border-top: solid 5px rgb(154, 248, 143);
         border-bottom: solid 5px rgb(154, 248, 143);
         padding: 3px;
+
+        background-color: rgb(217, 248, 213);
     }
 
     /* 4階スタンドLC席 */
@@ -67,6 +71,8 @@
         border-top: solid 5px rgb(81, 175, 199);
         border-bottom: solid 5px rgb(81, 175, 199);
         padding: 2px;
+
+        background-color: rgb(208, 243, 253);
     }
 }
 
@@ -82,11 +88,11 @@
 
     /* 2階スタンドLC席 */
     .stand-2lc {
-        /* border-right: solid 5px rgb(251, 206, 139); */
-        /* border-left: solid 5px rgb(251, 206, 139); */
         border-top: solid 5px rgb(251, 206, 139);
         border-bottom: solid 5px rgb(251, 206, 139);
         padding: 9px;
+
+        background-color: rgb(249, 247, 205);
     }
 
     /* 3階スタンドLC席 */
@@ -94,6 +100,8 @@
         border-top: solid 5px rgb(154, 248, 143);
         border-bottom: solid 5px rgb(154, 248, 143);
         padding: 3px;
+
+        background-color: rgb(217, 248, 213);
     }
 
     /* 4階スタンドLC席 */
@@ -101,5 +109,7 @@
         border-top: solid 5px rgb(81, 175, 199);
         border-bottom: solid 5px rgb(81, 175, 199);
         padding: 2px;
+
+        background-color: rgb(208, 243, 253);
     }
 }
