--- a/src/public/css/pia.standR.css
+++ b/src/public/css/pia.standR.css
@@ -89,6 +89,8 @@
     .stand-2r {
         border-right: solid 4px rgb(251, 206, 139);
         border-left: solid 4px rgb(251, 206, 139);
+
+        background-color: rgb(249, 247, 205);
     }
     .stand-2rTop {
         border-top: solid 1px rgb(251, 206, 139);
@@ -101,6 +103,8 @@
     .stand-3r {
         border-right: solid 4px rgb(154, 248, 143);
         border-left: solid 4px rgb(154, 248, 143);
+
+        background-color: rgb(217, 248, 213);
     }
     .stand-3rTop {
         border-top: solid 1px rgb(154, 248, 143);
@@ -113,6 +117,8 @@
     .stand-4r {
         border-right: solid 4px rgb(81, 175, 199);
         border-left: solid 4px rgb(81, 175, 199);
+
+        background-color: rgb(208, 243, 253);
     }
     .stand-4rTop {
         border-top: solid 1px rgb(81, 175, 199);
@@ -141,6 +147,8 @@
     .stand-2r {
         border-right: solid 4px rgb(251, 206, 139);
         border-left: solid 4px rgb(251, 206, 139);
+
+        background-color: rgb(249, 247, 205);
     }
     .stand-2rTop {
         border-top: solid 1px rgb(251, 206, 139);
@@ -153,6 +161,8 @@
     .stand-3r {
         border-right: solid 4px rgb(154, 248, 143);
         border-left: solid 4px rgb(154, 248, 143);
+
+        background-color: rgb(217, 248, 213);
     }
     .stand-3rTop {
         border-top: solid 1px rgb(154, 248, 143);
@@ -165,6 +175,8 @@
     .stand-4r {
         border-right: solid 4px rgb(81, 175, 199);
         border-left: solid 4px rgb(81, 175, 199);
+
+        background-color: rgb(208, 243, 253);
     }
     .stand-4rTop {
         border-top: solid 1px rgb(81, 175, 199);
