--- a/src/public/css/pia.standRC.css
+++ b/src/public/css/pia.standRC.css
@@ -53,6 +53,8 @@
         border-top: solid 5px rgb(251, 206, 139);
         border-bottom: solid 5px rgb(251, 206, 139);
         padding: 9px;
+
+        background-color: rgb(249, 247, 205);
     }
 
     /* 3階スタンドRC席 */
@@ -60,6 +62,8 @@
         border-top: solid 5px rgb(154, 248, 143);
         border-bottom: solid 5px rgb(154, 248, 143);
         padding: 3px;
+
+        background-color: rgb(217, 248, 213);
     }
 
     /* 4階スタンドRC席 */
@@ -67,6 +71,8 @@
         border-top: solid 5px rgb(81, 175, 199);
         border-bottom: solid 5px rgb(81, 175, 199);
         padding: 2px;
+
+        background-color: rgb(208, 243, 253);
     }
 }
 
@@ -84,6 +90,8 @@
         border-top: solid 5px rgb(251, 206, 139);
         border-bottom: solid 5px rgb(251, 206, 139);
         padding: 9px;
+
+        background-color: rgb(249, 247, 205);
     }
 
     /* 3階スタンドRC席 */
@@ -91,6 +99,8 @@
         border-top: solid 5px rgb(154, 248, 143);
         border-bottom: solid 5px rgb(154, 248, 143);
         padding: 3px;
+
+        background-color: rgb(217, 248, 213);
     }
 
     /* 4階スタンドRC席 */
@@ -98,5 +108,7 @@
         border-top: solid 5px rgb(81, 175, 199);
         border-bottom: solid 5px rgb(81, 175, 199);
         padding: 2px;
+
+        background-color: rgb(208, 243, 253);
     }
 }
