--- a/src/public/css/pia.arena.css
+++ b/src/public/css/pia.arena.css
@@ -30,9 +30,9 @@ p span {
         position: absolute;
         top: 80px;
         left: 540px;
-        color: #fff;
+        color: rgb(0, 0, 0);
 
-        background-color: #000000d8;
+        background-color: rgba(243, 239, 239, 0.867);
     }
 
     .mySeat {
@@ -112,8 +112,8 @@ p span {
         top: 70px;
         left: 340px;
 
-        color: #fff;
-        background-color: #000000d8;
+        color: rgb(0, 0, 0);
+        background-color: rgba(243, 239, 239, 0.867);
     }
     .piaTitle {
         margin-left: 15px;
@@ -182,8 +182,8 @@ p span {
         top: 170px;
         left: 10px;
 
-        color: #fff;
-        background-color: #000000ab;
+        color: rgb(2, 2, 2);
+        background-color: rgba(243, 239, 239, 0.867);
     }
 
     .mySeat {
