--- a/src/public/css/pia.arena.css
+++ b/src/public/css/pia.arena.css
@@ -64,7 +64,7 @@ p span {
 
     /* ステージ */
     .stage {
-        background: #9a8e8e;
+        background: #726a6a;
         color: #fff;
         padding: 25px;
         border-bottom: solid 20px;
@@ -140,7 +140,7 @@ p span {
 
     /* ステージ */
     .stage {
-        background: #9a8e8e;
+        background: #726a6a;
         color: #fff;
         padding: 25px;
         border-bottom: solid 20px;
@@ -214,7 +214,7 @@ p span {
 
     /* ステージ */
     .stage {
-        background: #9a8e8e;
+        background: #726a6a;
         color: #fff;
         padding: 25px;
         border-bottom: solid 20px;
