--- a/src/public/css/pia.arena.css
+++ b/src/public/css/pia.arena.css
@@ -24,7 +24,7 @@ p span {
         margin: 60px auto;
     }
     .py-4 {
-        background-image: url(https://yuzu-official.com/s3/skiyaki/uploads/ckeditor/pictures/423380/content_content_mother_other.jpg);
+        background-image: url(https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/2267102/b7730c78-8581-b75a-02f1-63bbb95592ec.jpeg);
     }
     .venue {
         padding: 0.5em 1em;
@@ -111,7 +111,7 @@ p span {
     }
 
     .py-4 {
-        background-image: url(https://yuzu-official.com/s3/skiyaki/uploads/ckeditor/pictures/423380/content_content_mother_other.jpg);
+        background-image: url(https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/2267102/b7730c78-8581-b75a-02f1-63bbb95592ec.jpeg);
         width: 110%;
     }
 
@@ -187,7 +187,7 @@ p span {
     }
 
     .py-4 {
-        background-image: url(https://yuzu-official.com/s3/skiyaki/uploads/ckeditor/pictures/423380/content_content_mother_other.jpg);
+        background-image: url(https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/2267102/b7730c78-8581-b75a-02f1-63bbb95592ec.jpeg);
         width: 230%;
     }
 
